make chinese text more readable; fix bug when menu contains line-break

--- a/enhancement.css
+++ b/enhancement.css
@@ -1,3 +1,5 @@
 .mxx-cn {
 	color:red;
+	font-weight: bold;
+	font-size: 150%;
 }
